src/objects/Localized_Auto_Response__c.object
<CustomObject>
    <fields>
        <fullName>CaseTeam__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CaseTeam</label>
        <referenceTo>Case_Team__c</referenceTo>
        <relationshipLabel>Localized Auto Responses</relationshipLabel>
        <relationshipName>Localized_Auto_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Template_Id__c</fullName>
        <label>Email Template Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Language</label>
        <referenceTo>Language__c</referenceTo>
        <relationshipLabel>Localized Auto Responses</relationshipLabel>
        <relationshipName>Localized_Auto_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Localized Auto Response</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Localized Auto Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>